[gd_scene load_steps=11 format=3 uid="uid://xeqhj84n5f1s"]

[ext_resource type="Script" uid="uid://dew61qeiisyel" path="res://Scenes & Scripts/Helpers/Components/ActionPreview/action_preview.gd" id="1_jor7y"]
[ext_resource type="Texture2D" uid="uid://uuw8rnwrivqj" path="res://Sprites/UI/Icons/selectbox_tl.png" id="1_ylcwy"]
[ext_resource type="Texture2D" uid="uid://b6vhdugmacbbi" path="res://Sprites/UI/Icons/selectbox_tr.png" id="2_jor7y"]
[ext_resource type="Texture2D" uid="uid://56stu62lh8yy" path="res://Sprites/UI/Icons/selectbox_bl.png" id="3_4u16s"]
[ext_resource type="Texture2D" uid="uid://c43ucggfxow3v" path="res://Sprites/UI/Icons/selectbox_br.png" id="4_q1j85"]

[sub_resource type="AtlasTexture" id="AtlasTexture_muf1e"]
atlas = ExtResource("1_ylcwy")
region = Rect2(0, 0, 8, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_4u23r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muf1e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_u2gsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jor7y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_k8ly5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4u16s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sd4c6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_q1j85")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ActionPreview" type="Node2D"]
script = ExtResource("1_jor7y")

[node name="CornerTopLeft" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4u23r")

[node name="CornerTopRight" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u2gsk")

[node name="CornerBottomLeft" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k8ly5")

[node name="CornerBottomRight" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sd4c6")
